Fix for JDK-8041934 causes assert(is_interpreted_frame()) failed: interpreted frame expected

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b15
    • Verified

      The fix for JDK-8041934 causes a number of tests to fail in -Xcomp mode with:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/jprt/T/P1/224444.cphillim/s/src/cpu/x86/vm/frame_x86.cpp:609), pid=5475, tid=140561383421696
      # assert(is_interpreted_frame()) failed: interpreted frame expected
      #

      Stack: [0x00007fd6ff43f000,0x00007fd6ff540000], sp=0x00007fd6ff53d8d0, free space=1018k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xfbb76a] VMError::report_and_die()+0x2da;; VMError::report_and_die()+0x2da
      V [libjvm.so+0x7205f4] report_vm_error(char const*, int, char const*, char const*)+0x84;; report_vm_error(char const*, int, char const*, char const*)+0x84
      V [libjvm.so+0x7eee15] frame::interpreter_frame_result(oop*, jvalue*)+0x65;; frame::interpreter_frame_result(oop*, jvalue*)+0x65
      V [libjvm.so+0xb4d04c] JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x72c;; JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x72c
      V [libjvm.so+0xe5dd18] SharedRuntime::jvmti_method_exit(JavaThread*, Method*)+0x148;; SharedRuntime::jvmti_method_exit(JavaThread*, Method*)+0x148
      J 1659 java.net.SocketInputStream.socketRead0(Ljava/io/FileDescriptor;[BIII)I (0 bytes) @ 0x00007fd6e838758a [0x00007fd6e83872c0+0x2ca]
      J 1658 C2 java.net.SocketInputStream.read([BIII)I (290 bytes) @ 0x00007fd6e839cbb8 [0x00007fd6e839cac0+0xf8]

            Assignee:
            Staffan Larsen (Inactive)
            Reporter:
            Staffan Larsen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: