8043314: Fix for JDK-8041934 causes assert(is_interpreted_frame()) failed: interpreted frame expected

Back out fix for JDK-8041934

Reviewed-by: coleenp, sspitsyn