hotspot/src/share/vm/runtime/sharedRuntime.hpp
@@ -263,9 +263,6 @@ class SharedRuntime: AllStatic {
   static int dtrace_method_entry(JavaThread* thread, Method* m);
   static int dtrace_method_exit(JavaThread* thread, Method* m);
 
-  // jvmti notification
-  static int jvmti_method_exit(JavaThread* thread, Method* m);
-
   // Utility method for retrieving the Java thread id, returns 0 if the
   // thread is not a well formed Java thread.
   static jlong get_java_tid(Thread* thread);
